6 unit - fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ header {
 
 .header .cart-block {
   float: right;
-  width: 105px;
+  max-width: 105px;
   text-align: right;
 }
 
